# smartestiroid

./: .gitignore  AGENTS.md  README.md  REFACTORING_SUMMARY.md  RELEASE_NOTE.md  capabilities.json  capabilities_chrome.json  config.py  conftest.py  custom_knowhow_example.txt  log_refactoring_plan.md  models.py  pyproject.toml  pytest.ini  simple_chat.py  t4c.csv  test_android_app.py  test_jpg_token.py  test_sessin_check.py  test_simple_client.py  test_tools.py  testsheet.csv  testsheet_en.csv  workflow.py
agents/: multi_stage_replanner.py  simple_planner.py
docs/: design_allure_attach_unification.md  objective_progress_design.md
examples/: README.md  basic_usage.py
src/: config.py  conftest.py  models.py  test_android_app.py  workflow.py
src/agents/: __init__.py
src/appium_tools/: app_management.py  device_info.py  interaction.py  navigation.py  session.py
src/smartestiroid/: __init__.py  config.py  conftest.py  models.py  progress.py  test_android_app.py  workflow.py
src/smartestiroid/agents/: __init__.py  simple_planner.py  (+1 more)
src/utils/: __init__.py
tests/: conftest.py  test_appium_tools_app.py  test_appium_tools_device.py  test_appium_tools_element.py  test_appium_tools_for_prompt.py  test_appium_tools_navigation.py  test_appium_tools_session.py  test_appium_tools_token_counter.py  test_failure_report_generator.py  test_global_stats.py  test_models_execution_progress.py  test_objective_progress.py  test_smartestiroid_import.py  test_structured_logger.py  test_tools.py  test_xml_compressor.py
utils/: allure_logger.py  device_info.py  screen_helper.py
(+15 files in other folders)
